2014-06-16  Mario Lang  <mlang@delysid.org>

	* chess-display.el (chess-display-move): Fix repainting when playing
	against the internal engine (AI) which runs off the `post-move' game
	event by adding a `redisplay' call just before the `post-move' emision.
	(chess-display-select-piece): Use `chess-display-draw-square'.
	(chess-display-draw-square): Make PIECE argument optional.
	(chess-display-mode-map): Bind DEL to `chess-input-shortcut-delete'
	as intended.

2014-06-15  Mario Lang  <mlang@delysid.org>

	* chess-display.el (chess-display-draw-square): New function.
	(chess-display-paint-move, chess-display-set-piece): Use it.
	(chess-display-highlight-move): Simplify.

	* chess-plain.el (chess-plain-handler): Fix error if unknown event
	is received.

	* chess-display.el (chess-display-select-piece): Redraw legal targets
	if a move is either accepted or the same piece is selected again.
	This fixes ...
	(chess-display-highlight-legal): Now set to `t' by default.

2014-06-14  Mario Lang  <mlang@delysid.org>

	* chess-test.el (chess-test): Renamed to...
	(chess-test-database): More descriptive name.
	(chess-perft): Require as this is our entry-point for testing.
	* doc/chess.texi: Renamed to...
	* chess.texi: Top-level file, keeping doc/ for just one file is useless.
	* Makefile: Adjust and use the predefined MAKEINFO variable from GNU Make.
	* chess-pgn.el (chess-game): Require.
	(chess-pgn-parse): Use `rx'.
	(chess-pgn-mode-map): New variable, split out from...
	(chess-pgn-mode): Fix autogenerated docstring to include keymap
	description.

	* chess-game.el (chess-pgn): Do not require.
	(chess-game-to-string, chess-game-from-string): Remove, all callers
	updated to use chess-pgn functions directly.

	* chess-algebraic.el (chess-ply-to-algebraic): If TYPE is `:numeric',
	generate ICCF numeric notation.
	(chess-algebraic-regexp, chess-algebraic-to-ply): Optionally allow "0-0"
	and "0-0-0" in addition to "O-O" and "O-O-O" to mean castling.