@@ -69,14 +69,18 @@
 	   (t (setq i (1+ i) x (1+ x)))))))
     ply))
 
-(defsubst chess-input-display-moves (&optional move-list)
-  (if (> (length chess-input-move-string) 0)
-      (message "[%s] %s" chess-input-move-string
-	       (mapconcat #'chess-ply-to-algebraic
-			  (or move-list
-			      (delq nil (mapcar 'chess-input-test-move
-						(cdr chess-input-moves))))
-			  " "))))
+(defun chess-input-display-moves (&optional move-list)
+  (unless move-list
+    (setq chess-input-test-move
+	  (delq nil (mapcar #'chess-input-test-move (cdr chess-input-moves)))))
+  (when chess-display-highlight-legal
+    (chess-display-redraw nil))
+  (when (> (length chess-input-move-string) 0)
+    (when chess-display-highlight-legal
+      (apply #'chess-display-highlight
+	     nil (cl-delete-duplicates (mapcar #'chess-ply-target move-list))))
+    (message "[%s] %s" chess-input-move-string
+	     (mapconcat #'chess-ply-to-algebraic move-list " "))))
 
 (defun chess-input-shortcut-delete ()
   (interactive)
@@ -144,6 +148,8 @@
 			(downcase (chess-ply-to-algebraic (cadr moves))))
 	       (setq moves (cdr moves))))
       (funcall chess-input-move-function nil (car moves))
+      (when chess-display-highlight-legal
+	(chess-display-redraw nil))
       (setq chess-input-move-string nil
 	    chess-input-moves nil
 	    chess-input-moves-pos nil))
